[MDK-1432] Fix layout problem on the controlBar

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -116,6 +116,18 @@ body {
   vertical-align: middle;
 }
 
+.mdk-ellipsis {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 85px;
+  right: 110px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height:$controlbar-height;
+}
+
 .mdk-base-element-margin {
   margin: 0 5px;
 }
